[project]
name = "arenaflow-ai"
version = "0.1.0"
description = "ArenaFlow AI smart stadium assistant for FIFA 2026"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "PL", "B", "A", "C4", "SIM", "ASYNC"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "reference-stadium"]
