[project]
name = "arenaflow-ai"
version = "0.1.0"
description = "ArenaFlow AI smart stadium assistant for FIFA 2026"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "google-generativeai>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "PL", "B", "A", "C4", "SIM", "ASYNC"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "reference-stadium"]
