[project]
name = "arenaflow-ai"
version = "0.1.0"
description = "ArenaFlow AI smart stadium assistant for FIFA 2026"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "google-generativeai>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "PL", "B", "A", "C4", "SIM", "ASYNC"]
ignore = [
    "E501",    # Line too long (standard formatting is fine)
    "PLR2004", # Magic value comparison (allowed in tests & code)
    "PLR0913", # Too many arguments in function definition
    "PLR0912", # Too many branches
    "N818",    # Exception name should end with Error
    "UP042",   # Enum StrEnum warning
    "PLC0415", # Import inside function (needed for conditional packages)
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "reference-stadium"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
